Config for NF Tower

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,7 @@
+nextflow.enable.dsl = 2
+manifest.defaultBranch = 'main'
+docker.enabled = true
+
 params {
   subject_id            = null
   tumor_id              = null
